--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
         <title>Yew-Built Rust App</title>
         <link data-trunk href="./index.css" rel="css" />
     </head>
-    <body></body>
+    <body class="bg-slate-600"></body>
 </html>
